tests/oauth2/echo-serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  namespace: components
  name: add-https
spec:
  hosts:
  - "echo.free.beeceptor.com"
  - "echoservice.ihc-dt.cluster-1.de"
  - "echoservice-tls.echoservice.svc.cluster.local"
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
    targetPort: 443
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
