tests/oauth2/envoy-oath2-secrets.yaml
#
# kubectl create secret -n components generic envoy-oauth2-secrets --from-file=envoy-oauth2-secrets --dry-run=client -o yaml 
#
apiVersion: v1
data:
  demo-a-productcatalogmanagement.yaml: cmVzb3VyY2VzOg0KLSAiQHR5cGUiOiAidHlwZS5nb29nbGVhcGlzLmNvbS9lbnZveS5leHRlbnNpb25zLnRyYW5zcG9ydF9zb2NrZXRzLnRscy52My5TZWNyZXQiDQogIG5hbWU6IGNsaWVudHNlY3JldA0KICBnZW5lcmljX3NlY3JldDoNCiAgICBzZWNyZXQ6DQogICAgICBpbmxpbmVfc3RyaW5nOiAiNGVNaThLNGNRT0ZhWEdFSlN2YTlpbUZsVFY1QkZxUDYiDQo=
  demo-b-productcatalogmanagement.yaml: cmVzb3VyY2VzOg0KLSAiQHR5cGUiOiAidHlwZS5nb29nbGVhcGlzLmNvbS9lbnZveS5leHRlbnNpb25zLnRyYW5zcG9ydF9zb2NrZXRzLnRscy52My5TZWNyZXQiDQogIG5hbWU6IGNsaWVudHNlY3JldA0KICBnZW5lcmljX3NlY3JldDoNCiAgICBzZWNyZXQ6DQogICAgICBpbmxpbmVfc3RyaW5nOiAiZWVCWWczeUt4Q3dlSFVqbUV1eWdNOVhLTGNaNnAxT08iDQo=
kind: Secret
metadata:
  creationTimestamp: null
  name: envoy-oauth2-secrets
  namespace: components
