tests/oauth2/envoy-sds-resources.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: istio-ingress
  name: oauth2secs-cm
data:
  demo-a-productcatalogmanagement.yaml: |+
    resources:
    - "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret"
      name: clientsecret
      generic_secret:
        secret:
          # Fill in the client secret your OAuth2 provider assigned to you.
          inline_string: "taaBBAFSFjBUriXihtYdTTHlA02DZ1oG"
