tests/oauth2/envoyfilter-oauth2.yaml
# https://github.com/istio/istio/wiki/EnvoyFilter-Samples#adding-a-http-lua-filter
# Edge LB (nginx) terminates HTTPS and forwards to istio-ingress using HTTP.
# X-Forward-Proto is set correctly to "https", but it is overwritten by istio.
# setting xff_num_trusted_hops did not help, so hardcode https as protocol.
# 
# Important for Keycloak Admin login and Swagger UI execution
# 
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter-oauth2-test
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  # https://github.com/istio/istio/issues/47572
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      #listener:
      #  filterChain:
      #    filter:
      #      name: envoy.filters.network.http_connection_manager
      #      subFilter:
      #        name: envoy.filters.http.jwt_authn
    patch:
      operation: INSERT_BEFORE
      value: 
         # https://github.com/veehaitch/envoy-oauth2-filter-google/blob/main/envoy/envoy.yaml
         name: envoy.filters.http.oauth2
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
           config:
             token_endpoint:
               # cluster: google-oauth2-token
               cluster: myrealm
               # uri: https://oauth2.googleapis.com/token
               uri: https://canvas-keycloak2.ihc-dt.cluster-3.de/auth/realms/myrealm/protocol/openid-connect/token
               timeout: 3s
             authorization_endpoint: https://canvas-keycloak2.ihc-dt.cluster-3.de/auth/realms/myrealm/protocol/openid-connect/auth
             # redirect_uri: https://vincent-haupert.de/oauth2/callback
             redirect_uri: https://echoservice.ihc-dt.cluster-3.de/ip
             redirect_path_matcher:
               path:
                # exact: /oauth2/callback
                exact: /ip
             signout_path:
               path:
                 exact: /oauth2/signout
             credentials:
               client_id: "demo-a-productcatalogmanagement"
               #token_secret: taaBBAFSFjBUriXihtYdTTHlA02DZ1oG
               #  name: token
               #  sds_config:
               #    path: "/etc/envoy/token-secret.yaml"
               #hmac_secret:
               #  name: hmac
               #  sds_config:
               #    path: "/etc/envoy/hmac-secret.yaml"
             forward_bearer_token: true
             # Cf. https://github.com/envoyproxy/envoy/pull/14168
             auth_scopes:
               - openid
